--- a/gleam.toml
+++ b/gleam.toml
@@ -1,5 +1,5 @@
 name = "gleescript"
-version = "1.0.0"
+version = "1.0.1"
 description = "Bundle your Gleam-on-Erlang project into an escript, a single executable file!"
 licences = ["Apache-2.0"]
 repository = { type = "github", user = "lpil", repo = "gleescript" }
@@ -10,12 +10,12 @@ links = [
 gleam = ">= 0.33.0"
 
 [dependencies]
-gleam_stdlib = "~> 0.32"
-gleam_erlang = "~> 0.23"
-tom = "~> 0.3"
-snag = "~> 0.3"
-simplifile = "~> 1.0"
-filepath = "~> 0.1"
+gleam_stdlib = ">= 0.32.0 and < 2.0.0"
+gleam_erlang = ">= 0.23.0 and < 2.0.0"
+tom = ">= 0.3.0 and < 2.0.0"
+snag = ">= 0.3.0 and < 2.0.0"
+simplifile = ">= 1.0.0 and < 2.0.0"
+filepath = ">= 0.1.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
