--- a/gleam.toml
+++ b/gleam.toml
@@ -16,6 +16,7 @@ tom = ">= 0.3.0 and < 2.0.0"
 snag = ">= 0.3.0 and < 2.0.0"
 simplifile = ">= 1.0.0 and < 2.0.0"
 filepath = ">= 0.1.0 and < 2.0.0"
+argv = ">= 1.0.2 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
